--- a/src/xgp3.0.0/upload/application/libraries/battle_engine/tests/runnable/WebTestGui.html
+++ b/src/xgp3.0.0/upload/application/libraries/battle_engine/tests/runnable/WebTestGui.html
@@ -1,16 +1,16 @@
 <html>
    <head>  
    <script type="text/javascript" src="tabber.js"></script>
-      <link rel="stylesheet" type="text/css" href="round.css">
-      
-      <link href="tabber.css" media="all" type="text/css" rel="stylesheet">
-      <title>OPBE</title>
+   <link rel="stylesheet" type="text/css" href="round.css">
+   <link href="tabber.css" media="all" type="text/css" rel="stylesheet">
+   <title>OPBE</title>
+   <script type="text/javascript" src="overlibmws.js"></script>
    </head>
    <body>
       <div id="box_trasparente">
          <div>
             <font color="blue">Ogame Probabilistic Battle Engine</font><br>
-            Version: beta 4       <br>
+            Version: beta 5       <br>
             Simulations done : <?php echo $count ?> <br>
             Select vars: 
             <select name="vars" onchange="window.location = 'WebTest.php?vars='+this.value;";>
